--- a/web/struct.html
+++ b/web/struct.html
@@ -24,6 +24,12 @@
         src="./animations/animationWEB/animation_HTML5 Canvas.html"
         frameborder="0"
       ></iframe>
+      <iframe
+        style="width: 100%; height: 880px"
+        title="Simulation"
+        src="./WebGLBuild/index.html"
+        frameborder="0"
+      ></iframe>
     </main>
   </body>
 </html>
