type=module added

--- a/web/struct.html
+++ b/web/struct.html
@@ -3,7 +3,7 @@
   <head id="head">
     <link rel="stylesheet" href="./css/styles.min.css" />
     <script src="./script/MyTags.js" async></script>
-    <script src="./script/loadTemplate.js" defer></script>
+    <script type="module" src="./script/loadTemplate.js" defer></script>
     <title>Структура установки</title>
   </head>
   <body>
@@ -24,6 +24,7 @@
         src="./animations/animationWEB/animation_HTML5 Canvas.html"
         frameborder="0"
       ></iframe>
+      <h4>Симулятор установки</h4>
       <iframe
         style="width: 100%; height: 880px"
         title="Simulation"
