--- a/web/theory.html
+++ b/web/theory.html
@@ -3,7 +3,7 @@
   <head id="head">
     <link rel="stylesheet" href="./css/styles.min.css" />
     <script src="./script/MyTags.js" async></script>
-    <script src="./script/loadTemplate.js" defer></script>
+    <script type="module" src="./script/loadTemplate.js" defer></script>
     <title>Теоретические сведения</title>
   </head>
   <body>
@@ -59,10 +59,10 @@
           <flip-text imgsrc="./img/Kelvin.jpg" description="Шкала Кельвина"
             >Кельвин</flip-text
           >
-          <div>
-            <img src="" alt="" />
-          </div>
         </h4>
+        <div>
+          <img src="" alt="" />
+        </div>
       </div>
       <next-button class="next-button" to="struct.html">
         К структуре
