--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head id="head">
     <script src="./script/MyTags.js" async></script>
-    <script src="./script/loadTemplate.js" defer></script>
+    <script type="module" src="./script/loadTemplate.js" defer></script>
     <link rel="stylesheet" href="./css/styles.min.css" />
     <title>Главная</title>
   </head>
