--- a/web/struct.html
+++ b/web/struct.html
@@ -19,18 +19,45 @@
       ></iframe>
       <h4>Работа установки</h4>
       <iframe
-        style="width: 100%; height: 880px"
+        style="width: 100%; height: 610px"
         title="Map"
         src="./animations/animationWEB/animation_HTML5 Canvas.html"
         frameborder="0"
       ></iframe>
       <h4>Симулятор установки</h4>
       <iframe
-        style="width: 100%; height: 880px"
+        style="width: 100%; height: 650px"
         title="Simulation"
         src="./WebGLBuild/index.html"
         frameborder="0"
       ></iframe>
     </main>
+    <div id="dialog_window">
+      <div class="toggler">
+        <h3 class="toggler_text">&lt;</h3>
+        <h3 class="toggler_text">&lt;</h3>
+        <h3 class="toggler_text">&lt;</h3>
+      </div>
+      <div id="modal_container">
+        <h4 class="label">Задайте ваш вопрос!</h4>
+        <h4 class="header">История:</h4>
+        <div class="history" id="history_container"></div>
+        <div id="input_field">
+          <input
+            type="text"
+            name=""
+            id="input_text"
+            placeholder="Задайте вопрос"
+          />
+          <button id="input_button">Отправить</button>
+          <button id="input_button_micro">&#127908;</button>
+        </div>
+      </div>
+      <div class="toggler">
+        <h3 class="toggler_text">></h3>
+        <h3 class="toggler_text">></h3>
+        <h3 class="toggler_text">></h3>
+      </div>
+    </div>
   </body>
 </html>
