--- a/web/theory.html
+++ b/web/theory.html
@@ -67,6 +67,32 @@
       <next-button class="next-button" to="struct.html">
         К структуре
       </next-button>
-    </main>
+    </main>    <div id="dialog_window">
+      <div class="toggler">
+        <h3 class="toggler_text">&lt;</h3>
+        <h3 class="toggler_text">&lt;</h3>
+        <h3 class="toggler_text">&lt;</h3>
+      </div>
+      <div id="modal_container">
+        <h4 class="label">Задайте ваш вопрос!</h4>
+        <h4 class="header">История:</h4>
+        <div class="history" id="history_container"></div>
+        <div id="input_field">
+          <input
+            type="text"
+            name=""
+            id="input_text"
+            placeholder="Задайте вопрос"
+          />
+          <button id="input_button">Отправить</button>
+          <button id="input_button_micro">&#127908;</button>
+        </div>
+      </div>
+      <div class="toggler">
+        <h3 class="toggler_text">></h3>
+        <h3 class="toggler_text">></h3>
+        <h3 class="toggler_text">></h3>
+      </div>
+    </div>
   </body>
 </html>
