--- a/web/theory.html
+++ b/web/theory.html
@@ -3,7 +3,7 @@
   <head id="head">
     <link rel="stylesheet" href="./css/styles.min.css" />
     <script src="./script/MyTags.js" async></script>
-    <script type="module" src="./script/loadTemplate.js" defer></script>
+    <script type="module" src="./script/script.js" defer></script>
     <title>Теоретические сведения</title>
   </head>
   <body>
@@ -67,7 +67,8 @@
       <next-button class="next-button" to="struct.html">
         К структуре
       </next-button>
-    </main>    <div id="dialog_window">
+    </main>
+    <div id="dialog_window">
       <div class="toggler">
         <h3 class="toggler_text">&lt;</h3>
         <h3 class="toggler_text">&lt;</h3>
