theory page update

--- a/web/theory.html
+++ b/web/theory.html
@@ -9,7 +9,7 @@
   <body>
     <nav id="nav"></nav>
     <div id="full-image">
-      <img src="" alt="someImg" id="img-flip" />
+      <img src="" alt="someImg" id="img-flip" class="hov" />
       <h2 id="img-descr"></h2>
     </div>
     <main>
@@ -38,10 +38,11 @@
           сопротивления ρ), длины l и площади поперечного сечения S.
         </h4>
         <h4>
-          Удельное сопротивление вещества металлического проводника зависит от
-          концентрации свободных носителей заряда и частоты их столкновений с
-          ионами кристаллической решётки, совершающими колебательные движения
-          около положений устойчивого равновесия.
+          <mark>Удельное сопротивление</mark>
+          вещества металлического проводника зависит от концентрации свободных
+          носителей заряда и частоты их столкновений с ионами кристаллической
+          решётки, совершающими колебательные движения около положений
+          устойчивого равновесия.
         </h4>
         <h4>
           В металлических проводниках концентрация свободных электронов
@@ -60,9 +61,326 @@
             >Кельвин</flip-text
           >
         </h4>
-        <div>
-          <img src="" alt="" />
-        </div>
+        <img src="./img/CoeffOfResistance.png" class="hov" />
+        <h4>
+          <mark>Электрон</mark> представляет собой субатомную частицу, чей
+          электрический заряд отрицателен и равен по модулю одному элементарному
+          электрическому заряду.
+        </h4>
+        <h4>
+          <mark>Заряд электрона</mark> равен -1.60217663 × 10
+          <sup>-19</sup>Кулона
+        </h4>
+        <h4>
+          <mark>Температурный коэффициент </mark>электрического сопротивления
+          это величина, равная относительному изменению электрического
+          сопротивления участка электрической цепи или удельного сопротивления
+          вещества при изменении температуры на единицу.
+        </h4>
+        <h4>
+          <mark>Проводником</mark> является вещество, среда, материал, хорошо
+          проводящие электрический ток.
+        </h4>
+        <h4>
+          <mark>Диэлектриком</mark> является вещество, относительно плохо
+          проводящее электрический ток.
+        </h4>
+        <h4>
+          <mark>Полупроводником</mark> является материал, по удельной
+          проводимости занимающий промежуточное место между проводниками и
+          диэлектриками, и отличающийся от проводников сильной зависимостью
+          удельной проводимости от концентрации примесей, температуры и
+          воздействия различных видов излучения.
+        </h4>
+        <h4>
+          <mark>Газовая горелка</mark> это устройство, которое создает
+          контролируемое пламя путем смешивания горючего газа, такого как
+          ацетилен, природный газ или пропан, с окислителем, таким как
+          окружающий воздух или подаваемый кислород, и обеспечивающее
+          воспламенение и горение.
+        </h4>
+        <h4>
+          <mark>Омметром</mark> является измерительный прибор непосредственного
+          отсчёта для определения электрических активных сопротивлений.
+        </h4>
+        <h4>Горелка выглядит так:</h4>
+        <img src="./img/горелка.png" alt="" class="hov" />
+        <h4>Стойка выглядит так:</h4>
+        <img src="./img/стойка.png" alt="" class="hov" />
+        <h4>Проводник выглядит так:</h4>
+        <img src="./img/проводник.png" alt="" class="hov" />
+        <h4>Омметр выглядит так:</h4>
+        <img src="./img/омметр.png" alt="" class="hov" />
+        <h4>Термометр выглядит так:</h4>
+        <img src="./img/термометр.png" alt="" class="hov" />
+        <h4>
+          Сопротивление измеряется в омах, для международного обозначения
+          которых используется греческая буква омега (Ω).
+        </h4>
+        <h4>
+          <mark>Электрическим сопротивлением</mark> проводника называется
+          физическая величина, характеризующая свойство проводника
+          препятствовать прохождению электрического тока.
+        </h4>
+        <h4>
+          <mark>Удельным сопротивлением</mark> называется скалярная физическая
+          величина, численно равная сопротивлению однородного цилиндрического
+          проводника единичной длины и единичной площади поперечного сечения.
+        </h4>
+        <h4>Удельное сопротивление измеряется в Ом*м</h4>
+        <h4>
+          Температурный коэффициент электрического сопротивления измеряется в
+          кельвинах в минус первой степени (K<sup>-1</sup>)
+        </h4>
+        <h4>Формула электрического сопротивления выглядит так:</h4>
+        <img src="./img/Resistance.jpg" class="hov" />
+        <h4>Формула удельного сопротивления выглядит так:</h4>
+        <img src="./img/удельноесопротивление.jpg" class="hov" />
+        <h4>Формула температурного сопротивления выглядит так:</h4>
+        <img
+          src="./img/FORMULA-ZAVISIMOSTI-SOPROTIVLENIYA-OT-TEMPERATURYI.jpg"
+          class="hov"
+        />
+        <h4>
+          <mark>Длина</mark> это физическая величина, числовая характеристика
+          протяжённости линий.
+        </h4>
+        <h4>
+          <mark>Площадью</mark> является часть плоскости, заключённой внутри
+          замкнутой геометрической фигуры.
+        </h4>
+        <h4>
+          <mark>Температура</mark> это скалярная физическая величина,
+          характеризующая термодинамическую систему и количественно выражающая
+          интуитивное понятие о различной степени нагретости тел.
+        </h4>
+        <h4>
+          <mark>Градусом Кельвина</mark> называется единица термодинамической
+          температуры в Международной системе единиц, одна из семи основных
+          единиц СИ
+        </h4>
+        <h4>
+          <mark>Уильям Кельвин</mark> это британский физик, механик и инженер.
+          Известен своими работами в области термодинамики, механики,
+          электродинамики.
+        </h4>
+        <h4>Градус Кельвин в Цельсиях равен 272,15 Цельсия</h4>
+        <h4>
+          Градусом Цельсия называется широко распространённая единица
+          температуры, применяемая в Международной системе единиц наряду с
+          кельвином.
+        </h4>
+        <h4>Градус Цельсия в Кельвинах равен 274,15 Градусов Кельвина</h4>
+        <h4>
+          Термометром является измерительный прибор для измерения температуры
+          различных тел и сред.
+        </h4>
+        <h4>
+          Градусником является измерительный прибор для измерения температуры
+          различных тел и сред.
+        </h4>
+        <h4>
+          Термометры бывают жидкостные, механические, газовые, электрические,
+          оптические.
+        </h4>
+        <h4>
+          Омметры бывают мегаомметры, гигаомметры, тераомметры, миллиомметры,
+          микроомметры, различающиеся диапазонами измеряемых сопротивлений.
+        </h4>
+        <h4>График температурного сопротивления выглядит так:</h4>
+        <img src="./img/ResisDepend.jpg" class="hov" />
+        <h4>
+          Графиком называется диаграмма, изображающая при помощи кривых
+          количественные показатели развития, состояния чего-нибудь
+        </h4>
+        <h4>
+          <mark>Нагревом</mark> называется искусственный либо естественный
+          процесс повышения температуры материала/тела, либо за счёт внутренней
+          энергии, либо за счёт подведения к нему энергии извне
+        </h4>
+        <h4>
+          <mark>Проводом</mark> является электротехническое изделие, служащее
+          для соединения источника электрического тока с потребителем,
+          компонентами электрической схемы.
+        </h4>
+        <h4>
+          <mark>Законом Ома</mark> называется эмпирический физический закон,
+          определяющий связь электродвижущей силы источника с силой тока,
+          протекающего в проводнике, и сопротивлением проводника.
+        </h4>
+        <h4><mark>Колесосо Ома</mark> выглядит вот так:</h4>
+        <img src="./img/Wheel.png" class="hov" />
+        <h4>
+          <mark>Кристаллической решёткой</mark> является вспомогательный
+          геометрический образ, вводимый для анализа строения кристалла.
+        </h4>
+        <h4>Пример кристаллической решетки выглядит вот так:</h4>
+        <img src="./img/решетки.jpg" class="hov" />
+        <h4>
+          Неспаренный электрон представляет электрон, который занимает орбиталь
+          атома по отдельности, а не как часть электронной пары.
+        </h4>
+        <h4>
+          Свободный электрон является электроном, который занимает орбиталь
+          атома по отдельности, а не как часть электронной пары.
+        </h4>
+        <h4>
+          <mark>Автором работы</mark> является Гончаревич Евгений Витальевич
+        </h4>
+        <h4><mark>Схема установки</mark> выглядит так:</h4>
+        <img src="./img/Schema.jpg" class="hov" />
+        <h4>
+          <mark>Карта установки</mark> находится <a href="struct.html">здесь</a>
+        </h4>
+        <h4>
+          <mark>Анимация работы</mark> установки находится
+          <a href="struct.html">здесь</a>
+        </h4>
+        <h4>
+          <mark>Симуляция работы установки</mark> находится
+          <a href="simulator.html">здесь</a>
+        </h4>
+        <h4>Термометр в работе называется Термометр-12.51</h4>
+        <h4>Омметр в работе называется Омметр13-2</h4>
+        <h4>
+          <mark>Алюминий</mark> это химический элемент 13-й группы третьего
+          периода периодической таблицы химических элементов Д. И. Менделеева, с
+          атомным номером 13.
+        </h4>
+        <h4>Алюминиевый проводник выглядит вот так:</h4>
+        <img src="./img/алюминий.jpg" class="hov" />
+        <h4>
+          <mark>Свинец</mark> это элемент 14-й группы, шестого периода
+          периодической системы химических элементов Д. И. Менделеева, с атомным
+          номером 82 и, таким образом, содержит магическое число протонов.
+        </h4>
+        <h4>Свинцовый проводник выглядит вот так:</h4>
+        <img src="./img/свинец.jfif" class="hov" />
+        <h4>
+          <mark>Железо</mark> это химический элемент 8-й группы четвёртого
+          периода периодической системы химических элементов Д. И. Менделеева с
+          атомным номером 26.
+        </h4>
+        <h4>Железный проводник выглядит вот так:</h4>
+        <img src="./img/железо.jfif" class="hov" />
+        <h4>
+          <mark>Тепловым расширением</mark> является изменение линейных размеров
+          и формы тела при изменении его температуры.
+        </h4>
+        <h4>
+          <mark>Термическое расширение</mark> есть изменение линейных размеров и
+          формы тела при изменении его температуры.
+        </h4>
+        <h4>Лабораторная установка выглядит вот так</h4>
+        <img src="./img/Installation.jpg" class="hov" />
+        <h4>
+          Лаборатоный опыт называется "Зависимость электрической
+          сопротивляемости металлов от температуры"
+        </h4>
+        <h4>
+          Атомом называется частица вещества микроскопических размеров и массы,
+          наименьшая часть химического элемента, являющаяся носителем его
+          свойств.
+        </h4>
+        <h4>
+          Протоном называется одна из трёх элементарных частиц, из которых
+          построено обычное вещество. Протоны входят в состав атомных ядер
+        </h4>
+        <h4>Заряд протона равен 1,6022⋅10<sup>−19 </sup>Кл.</h4>
+        <h4>
+          Сутью лабораторного опыта является выявление зависимости сопротивления
+          металлов от температуры.
+        </h4>
+        <h4>
+          Удельное сопротивление алюминия равно 0,028 мкОм • мм<sup>2</sup>/м
+        </h4>
+        <h4>
+          Удельное сопротивление железа равно 0,098 мкОм • мм<sup>2</sup>/м
+        </h4>
+        <h4>
+          Удельное сопротивление свинца равно 0,221 мкОм • мм<sup>2</sup>/м
+        </h4>
+        <h4>
+          Температурный коэффициент алюминия равен
+          <b>α = 4,2 · 10<sup>-</sup><sup>3</sup> К<sup>-</sup><sup>1</sup></b>
+        </h4>
+        <h4>
+          Температурный коэффициент железа равен
+          <b>α = 6,0 · 10<sup>-</sup><sup>3</sup> К<sup>-</sup><sup>1</sup></b>
+        </h4>
+        <h4>
+          Температурный коэффициент свинца равен
+          <b>α = 3,7 · 10<sup>-</sup><sup>3</sup> К<sup>-</sup><sup>1</sup></b>
+        </h4>
+        <h4>
+          Формула температурного коэффициента сопротивления выражается как:
+        </h4>
+        <img src="./img/CoeffOfResistance.png" class="hov" />
+        <h4>Единицей измерения удельного сопротивления является Ом*м</h4>
+        <h4>
+          <mark>Резистором</mark> называется пассивный элемент электрических
+          цепей, обладающий определённым или переменным значением электрического
+          сопротивления, предназначенный для линейного преобразования силы тока
+          в напряжение и напряжения в силу тока, ограничения тока, поглощения
+          электрической энергии и др.
+        </h4>
+        <h4>
+          <mark>Электрическое напряжение</mark> есть разность потенциалов между
+          двумя точками в электрическом поле. Это движущая сила для
+          электрического заряда.
+        </h4>
+        <h4>
+          Напряжение между проводниками есть разность потенциалов между двумя
+          точками в электрическом поле.
+        </h4>
+        <h4>Электрический потенциал измеряется в Вольтах</h4>
+        <h4>
+          Разность потенциалов есть физическая скалярная величина, равная
+          отношению работы, совершаемой силой поля при перемещении пробного
+          заряда из начальной точки в конечную, к значению этого заряда
+        </h4>
+        <h4>Формула напряжения выглядит так:</h4>
+        <img src="./img/напряжение.jpg" class="hov" />
+        <h4>
+          Алессандро Вольта это итальянский физик, химик и физиолог, один из
+          основоположников учения об электричестве.
+        </h4>
+        <h4>
+          Сила тока есть скалярная физическая величина, равная отношению
+          электрического заряда dQ, прошедшего через определённую поверхность за
+          бесконечно малый промежуток времени dt, к длительности этого
+          промежутка
+        </h4>
+        <h4>
+          Электрический ток есть направленное движение частиц или квазичастиц
+          носителей электрического заряда.
+        </h4>
+        <h4>
+          Электротоком называется направленное движение частиц или квазичастиц
+          носителей электрического заряда.
+        </h4>
+        <h4>Сила электрического тока измеряется в Амперах</h4>
+        <h4>Формула силы тока выглядит так:</h4>
+        <img src="./img/силатока.webp" class="hov" />
+        <h4>
+          Андре-Мари Ампер это французский физик, математик и
+          естествоиспытатель.
+        </h4>
+        <h4>Формула напряжения выглядит так:</h4>
+        <img src="./img/напряжение.jpg" class="hov" />
+        <h4>
+          Напряжённостью электрического поля называется векторная физическая
+          величина, характеризующая электрическое поле в данной точке и равная
+          отношению силы, действующей на неподвижный точечный заряд, помещённый
+          в данную точку поля, к величине этого заряда q
+        </h4>
+        <h4>
+          <mark>Георг Симон Ом</mark> это немецкий физик, который вывел
+          теоретически и подтвердил на опыте закон, выражающий связь между силой
+          тока в цепи, напряжением и сопротивлением.
+        </h4>
+        <h4>Портрет Георга Симона Ома представлен здесь</h4>
+        <img src="./img/Ohm.jpg" class="hov" />
       </div>
       <next-button class="next-button" to="struct.html">
         К структуре
