simulator and struct pages update

--- a/web/simulator.html
+++ b/web/simulator.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <nav id="nav"></nav>
+    <main>
+      <h4 style="text-align: center">Симулятор установки</h4>
+      <iframe
+        style="width: 100%; height: 650px"
+        title="Simulation"
+        src="./WebGLBuild/index.html"
+        frameborder="0"
+      ></iframe>
+    </main>
   </body>
   <div id="dialog_window">
     <div class="toggler">
