--- a/web/struct.html
+++ b/web/struct.html
@@ -10,25 +10,18 @@
     <nav id="nav"></nav>
     <main>
       <h1>Структура установки</h1>
-      <h4>Карта установки</h4>
+      <h4 style="text-align: center">Карта установки</h4>
       <iframe
         style="width: 100%; height: 880px"
         title="Map"
         src="./animations/mapWEB/map_HTML5 Canvas.html"
         frameborder="0"
       ></iframe>
-      <h4>Работа установки</h4>
+      <h4 style="text-align: center">Работа установки</h4>
       <iframe
         style="width: 100%; height: 610px"
         title="Map"
         src="./animations/animationWEB/animation_HTML5 Canvas.html"
-        frameborder="0"
-      ></iframe>
-      <h4>Симулятор установки</h4>
-      <iframe
-        style="width: 100%; height: 650px"
-        title="Simulation"
-        src="./WebGLBuild/index.html"
         frameborder="0"
       ></iframe>
     </main>
