--- a/web/contacts.html
+++ b/web/contacts.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <nav id="nav"></nav>
+    <main>
+      <h1 style="text-align: center">Автор курсового проекта</h1>
+      <br />
+      <img src="./img/ILoveGourine.jpg" class="hov" /> <br />
+      <h3>Гончаревич Евгений Витальевич</h3>
+      <h4 style="text-align: center">ФИТ 3-1</h4>
+    </main>
   </body>
   <div id="dialog_window">
     <div class="toggler">
