--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
         УНИВЕРСИТЕТ"
       </h3>
       <h1 class="h1">Курсовой проект</h1>
-      <h4 class="h4">
+      <h4 class="h4" style="text-align: center">
         Зависимость электрической сопротивляемости металлов от температуры
       </h4>
       <div id="by">
