--- a/web/theory.html
+++ b/web/theory.html
@@ -379,7 +379,7 @@
           теоретически и подтвердил на опыте закон, выражающий связь между силой
           тока в цепи, напряжением и сопротивлением.
         </h4>
-        <h4>Портрет Георга Симона Ома представлен здесь</h4>
+        <h4>Портрет Георга Симона Ома представлен здесь:</h4>
         <img src="./img/Ohm.jpg" class="hov" />
       </div>
       <next-button class="next-button" to="struct.html">
