--- a/web/struct.html
+++ b/web/struct.html
@@ -3,7 +3,7 @@
   <head id="head">
     <link rel="stylesheet" href="./css/styles.min.css" />
     <script src="./script/MyTags.js" async></script>
-    <script type="module" src="./script/script.js" defer></script>
+    <script  src="./script/script.js" defer></script>
     <title>Структура установки</title>
   </head>
   <body>
