--- a/web/animations/animationWEB/animation_HTML5 Canvas.html
+++ b/web/animations/animationWEB/animation_HTML5 Canvas.html
@@ -13,7 +13,7 @@
     <meta name="authoring-tool" content="Adobe_Animate_CC" />
     <title>animation_HTML5 Canvas</title>
     <!-- write your code here -->
-    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+    <script src="../../script/createjs.min.js"></script>
     <script src="animation_HTML5 Canvas.js?1665611174531"></script>
     <script>
       var canvas,
