--- a/web/simulator.html
+++ b/web/simulator.html
@@ -16,6 +16,9 @@
         src="./WebGLBuild/index.html"
         frameborder="0"
       ></iframe>
+      <next-button class="next-button" to="contacts.html">
+        К контактам
+      </next-button>
     </main>
   </body>
   <div id="dialog_window">
