--- a/web/struct.html
+++ b/web/struct.html
@@ -3,7 +3,7 @@
   <head id="head">
     <link rel="stylesheet" href="./css/styles.min.css" />
     <script src="./script/MyTags.js" async></script>
-    <script  src="./script/script.js" defer></script>
+    <script src="./script/script.js" defer></script>
     <title>Структура установки</title>
   </head>
   <body>
@@ -24,6 +24,9 @@
         src="./animations/animationWEB/animation_HTML5 Canvas.html"
         frameborder="0"
       ></iframe>
+      <next-button class="next-button" to="simulator.html">
+        К симулятору
+      </next-button>
     </main>
     <div id="dialog_window">
       <div class="toggler">
