--- a/web/struct.html
+++ b/web/struct.html
@@ -17,6 +17,55 @@
         src="./animations/mapWEB/map_HTML5 Canvas.html"
         frameborder="0"
       ></iframe>
+      <h4 style="text-align: center">Схема установки</h4>
+      <img src="./img/Schema.jpg" class="hov" />
+      <ul>
+        <li>1. Проводник</li>
+        <li>2. Горелка</li>
+        <li>3. Стойка</li>
+        <li>4. Термометр</li>
+        <li>5. Монометр</li>
+      </ul>
+      <h2>Порядок выполнения работы</h2>
+      <ul style="text-align: left; margin: auto; width: 70%">
+        <li>Задание 1. Запишите в таблицу температуру проводника (свинец).</li>
+        <li>Задание 2. Запишите в таблицу сопротивление проводника.</li>
+        <li>Задание 3. Поверните ручку горелки и нагрейте металл до 50 °С.</li>
+        <li>Задание 4. Запишите в таблицу температуру проводника.</li>
+        <li>Задание 5. Запишите в таблицу сопротивление проводника.</li>
+        <li>
+          Задание 6. Поверните ручку горелки и нагрейте металл до 100 °С.
+          Запишите температуру.
+        </li>
+        <li>Задание 7. Запишите сопротивление.</li>
+        <li>Задание 8. Выключите горелку. Смените металл на алюминий.</li>
+        <li>Задание 9. Запишите в таблицу температуру проводника.</li>
+        <li>Задание 10. Запишите в таблицу сопротивление проводника.</li>
+        <li>
+          Задание 11. Поверните ручку горелки и нагрейте металл до 50 °С.
+          Запишите температуру.
+        </li>
+        <li>Задание 12. Запишите сопротивление.</li>
+        <li>
+          Задание 13. Поверните ручку горелки и нагрейте металл до 100 °С.
+          Запишите температуру.
+        </li>
+        <li>Задание 14. Запишите сопротивление.</li>
+        <li>Задание 15. Выключите горелку. Смените металл на железо.</li>
+        <li>Задание 16. Запишите в таблицу температуру проводника.</li>
+        <li>Задание 17. Запишите в таблицу сопротивление проводника.</li>
+        <li>
+          Задание 18. Поверните ручку горелки и нагрейте металл до 50 °С.
+          Запишите температуру.
+        </li>
+        <li>Задание 19. Запишите сопротивление.</li>
+        <li>
+          Задание 20. Поверните ручку горелки и нагрейте металл до 100 °С.
+          Запишите температуру.
+        </li>
+        <li>Задание 21. Запишите сопротивление.</li>
+        <li>Задание 22. Выключите горелку. Смените металл на свинец.</li>
+      </ul>
       <h4 style="text-align: center">Работа установки</h4>
       <iframe
         style="width: 100%; height: 610px"
@@ -25,7 +74,7 @@
         frameborder="0"
       ></iframe>
       <next-button class="next-button" to="simulator.html">
-        К симулятору
+        Cимулятор
       </next-button>
     </main>
     <div id="dialog_window">
